@@ -1,4 +1,5 @@
 1.2.1
+ * Fall back to old manifest if most recent is unparseable (CASSANDRA-5041)
  * pool [Compressed]RandomAccessReader objects on the partitioned read path
    (CASSANDRA-4942)
  * Add debug logging to list filenames processed by Directories.migrateFile 
